<resources>
    <string name="app_name">小至音乐</string>

    <!-- 图标 -->
    <string name="image_login_name">&#xe63c;</string>
    <string name="image_login_pwd">&#xe627;</string>
    <string name="image_edittext_delete">&#xe692;</string>
    <string name="image_login_pwd_according">&#xe72f;</string>
    <string name="image_login_pwd_hidden">&#xe61f;</string>
    <string name="image_login_weChat">&#xe717;</string>
    <string name="image_mobile">&#xe60c;</string>
    <string name="image_verification_code">&#xe612;</string>
    <string name="image_password">&#xe627;</string>
    <string name="image_bule_more">&#xe611;</string>
    <string name="image_update_password_new">&#xe613;</string>
<string name="text_begin">开始</string>
<string name="text_begin_recognizer">开始识别</string>
    <string name="app_id">5e88509e</string>
    <!-- Login -->
    <string name="login_name_hint">请输入手机号码</string>
    <string name="login_pwd_hint">请输入密码</string>
    <string name="login_keep_pwd">记住密码</string>
    <string name="login_forget_pwd">忘记密码?</string>
    <string name="login_login">登录</string>
    <string name="login_weChat_login">微信登录</string>
    <string name="login_weChat">微信</string>
    <string name="login_name_null">帐号不能为空!</string>
    <string name="login_pwd_null">密码不能为空!</string>
    <string name="login_pwd_length_error">密码长度必须大于6位!</string>
    <string name="login_ts_msg">正在登录,请稍后...</string>
    <string name="login_success">登录成功</string>


    <string name="press_again_exit">再按一次退出</string>
    <string name="app_network_false">当前网络不可用!</string>
    <string name="app_network_error">网络出现错误!</string>

    <string name="app_dialog_hint">加载中，请稍后...</string>
    <string name="app_dialog_getData">获取数据中，请稍后...</string>
    <string name="app_dialog_save">保存数据中，请稍后...</string>
    <string name="app_dialog_delete">删除中，请稍后...</string>
    <string name="app_btn_save">保存</string>
    <string name="app_btn_add">添加</string>
    <string name="app_btn_add_two">新增</string>
    <string name="app_btn_determine">确定</string>
    <string name="app_btn_complete">完成</string>
    <string name="app_btn_edit">编辑</string>
    <string name="app_btn_delete">删除</string>
    <string name="app_btn_submit">提交</string>

    <!-- 自定义组件 -->
    <string name="pull_to_refresh">下拉可以刷新</string>
    <string name="release_to_refresh">松开可以刷新</string>
    <string name="lastUpdateTime">最近更新：%s</string>
    <string name="load_full">已加载全部</string>
    <string name="no_data">暂无数据</string>
    <string name="more">加载中</string>
    <string name="d">图片描述</string>


    <string name="personal_center_system_set">修改密码</string>
    <string name="personal_system_informs">系统通知</string>

    <!-- 修改密码 -->
    <string name="update_password_title">修改密码</string>
    <string name="update_password_ts">为了你的账号安全，修改密码前请输入原密码</string>
    <string name="update_password_original">请输入原密码</string>
    <string name="update_password_new">请输入新密码</string>
    <string name="update_password_new_confirm">请再次输入新密码</string>
    <string name="update_password_determine">确认修改</string>

    <string name="setting_key_mobile_network_play">mobile_network_play</string>
    <string name="setting_key_mobile_network_download">mobile_network_download</string>
    <string name="setting_key_sound_effect">sound_effect</string>
    <string name="setting_key_filter_size">filter_size</string>
    <string name="setting_key_filter_time">filter_time</string>


    <string name="sure">确定</string>
    <string name="cancel">取消</string>
    <string name="share">分享</string>
    <string name="delete">删除</string>
    <string name="search">搜索</string>
    <string name="save">保存</string>
    <string name="loading">努力加载中…</string>
    <string name="load_fail">加载失败，请检查网络后重试</string>
    <string name="local_music">本地音乐</string>
    <string name="online_music">在线音乐</string>
    <string name="listening_music">听歌识曲</string>
    <string name="unknown">未知</string>
    <string name="delete_music">删除%s？</string>
    <string name="setting_ringtone_success">设置铃声成功</string>
    <string name="no_local_music">暂无本地音乐</string>
    <string name="song_list_item_title_1">1.%1$s - %2$s</string>
    <string name="song_list_item_title_2">2.%1$s - %2$s</string>
    <string name="song_list_item_title_3">3.%1$s - %2$s</string>
    <string name="mode_loop">列表循环</string>
    <string name="mode_shuffle">随机播放</string>
    <string name="mode_one">单曲循环</string>
    <string name="play_time_start">00:00</string>
    <string name="now_play">正在播放：%s</string>
    <string name="now_download">正在下载：%s</string>
    <string name="download_success">%s下载完成</string>
    <string name="recent_update">最近更新：%s</string>
    <string name="unable_to_play">暂时无法播放</string>
    <string name="unable_to_download">暂时无法下载</string>
    <string name="unable_to_share">暂时无法分享</string>
    <string name="artist_info">歌手信息</string>
    <string name="artist_info_name">姓名：%s</string>
    <string name="artist_info_country">国籍：%s</string>
    <string name="artist_info_constellation">星座：%s</string>
    <string name="artist_info_stature">身高：%scm</string>
    <string name="artist_info_weight">体重：%skg</string>
    <string name="artist_info_birth">生日：%s</string>
    <string name="artist_info_intro">简介：%s</string>
    <string name="artist_info_empty">暂无歌手信息</string>
    <string name="share_music">我用%1$s分享了歌曲《%2$s》%3$s</string>
    <string name="search_tips">歌曲名、歌手名</string>
    <string name="search_empty">未找到相关结果</string>
    <string name="menu_setting">功能设置</string>
    <string name="menu_share">推荐给朋友</string>
    <string name="menu_about">关于波尼音乐</string>
    <string name="menu_night">夜间模式</string>
    <string name="menu_timer">定时停止播放</string>
    <string name="menu_exit">退出应用</string>
    <string name="network">网络</string>
    <string name="mobile_network_play">使用移动网络播放</string>
    <string name="mobile_network_download">使用移动网络下载</string>
    <string name="play">播放</string>
    <string name="sound_effect">音效调节</string>
    <string name="tips">温馨提示</string>
    <string name="play_tips">当前处于移动网络，确定打开移动网络播放开关吗？</string>
    <string name="play_tips_sure">立即打开</string>
    <string name="download_tips">当前处于移动网络，下载将消耗较多流量，是否继续下载？</string>
    <string name="download_tips_sure">继续下载</string>
    <string name="device_not_support">您的设备不支持此功能</string>
    <string name="weather_temp">%s°</string>
    <string name="weather_wind">%1$s风%2$s级&#160;&#160;湿度%3$s%%</string>
    <string name="timer_set">设置成功，将于%s分钟后关闭</string>
    <string name="timer_cancel">定时停止播放已取消</string>
    <string name="share_app">青春，狂热，放纵，自由，当我们带上耳机以后做回自己，这是音乐的魅力。%s：http://fir.im/ponymusic</string>
    <string name="copyright">Copyright © 2015&#045;%d SWUST</string>
    <string name="about_project_url">https://github.com/wangchenyan/PonyMusic</string>
    <string name="about_weibo">http://weibo.com/wangchenyan1993</string>
    <string name="about_jianshu">http://www.jianshu.com/users/3231579893ac</string>
    <string name="about_github">https://github.com/wangchenyan</string>
    <string name="music_info">歌曲信息</string>
    <string name="no_permission_location">没有位置信息权限，无法更新天气！</string>
    <string name="no_permission_storage">没有存储空间权限，无法扫描本地歌曲！</string>
    <string name="no_permission_setting">没有权限，无法设置铃声，请授予权限</string>
    <string name="grant_permission_setting">授权成功，请在再次操作以设置铃声</string>
    <string name="no_permission_select_image">没有权限，无法选择图片！</string>
    <string name="activity_playlist">播放列表</string>

    <!-- 权限 -->
    <string name="permission_fail_apply">权限申请失败</string>
    <string name="permission_fail_apply_message">此功能需要定位、文件读取权限，请您到设置页面手动授权，否则功能无法正常使用！</string>
    <string name="permission_set">设置</string>
    <string name="permission_fail_apply_message_one">此功能需要相机、文件读取，请您到设置页面手动授权，否则功能无法正常使用！</string>


</resources>
